--- a/site/package.json
+++ b/site/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "loading-progress-bar": "^2.0.4",
+    "local-storage": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.5",
     "saas": "^1.0.0",
     "sass": "^1.52.3",
     "scripts": "^0.1.0",
